# task

./: .env.example  .gitignore  build.bat  capacitor.config.json  package-lock.json  package.json  vite.config.js
android/app/: build.gradle
android/app/src/main/java/com/eisenhower/task/: MainActivity.java
android/app/src/main/res/values/: strings.xml
docs/: code-standards.md  codebase-summary.md  project-overview-pdr.md  project-roadmap.md  session-260618-cross-platform-expansion.md  system-architecture.md
extension/: background.js  manifest.json  popup.css  popup.html  popup.js
plans/260615-1152-eisenhower-task-manager/: phase-00-env-check.md  phase-01-setup.md  phase-02-implement-ui.md  phase-03-implement-classifier.md  phase-04-test.md  plan.md
plans/260617-1745-cross-platform-expansion-plan/: phase-01-data-layer.md  phase-02-firebase-sync.md  phase-03-pwa-and-chrome-extension.md  phase-04-android-apk.md  plan.md
plans/reports/: tester-260615-1211-eisenhower-build-test-report.md
public/: manifest.json  sw.js
src/: classifier.js  db.js  firebase-config.js  firebase.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
