[package]
name = "eisenhower-task"
version = "0.1.0"
description = "Eisenhower Matrix Task Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "eisenhower_task_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
